Add css to google map location div

--- a/flask_project/static/css/styles.css
+++ b/flask_project/static/css/styles.css
@@ -100,6 +100,7 @@ body::-webkit-scrollbar-thumb {
     margin-top: 50px;
     height: 510px;
 }
+
 .our-works-wrapper {
     display: flex;
     justify-content: space-between;
@@ -142,14 +143,13 @@ body::-webkit-scrollbar-thumb {
     font-weight: 500;
     font-size: 18px;
     border-radius: 7px;
-    transition: color .3s ease-in-out, box-shadow .3s ease-in-out ;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
 }
 
 .instagram-link a:hover {
     background: black;
     box-shadow: inset 200px 0 0 0 pink;
 }
-
 
 
 .instagram-link a i {
@@ -186,4 +186,75 @@ body::-webkit-scrollbar-thumb {
     width: 100%;
     height: 100%;
     border-radius: 5px;
+}
+
+.google-map {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.location-studio {
+    color: #c48d4d;
+    font-weight: 400;
+    font-size: 20px;
+    position: relative;
+    right: 600px;
+    text-transform: uppercase;
+}
+
+.location-studio-dropdown {
+    font-size: 33px;
+    font-weight: bold;
+    position: relative;
+    right: 576px;
+    margin-bottom: 30px;
+}
+
+.location-dropdown {
+    position: relative;
+    bottom: 74px;
+    width: 216px;
+    left: 510px;
+    border: 1px solid #c48d4d;
+    border-radius: 5px;
+    text-align: left;
+    padding: 10px 0 10px 10px;
+    font-size: 17px;
+    cursor: pointer;
+}
+
+.location-dropdown i {
+    margin-right: 10px;
+}
+
+.location-dropdown #angle {
+    margin-left: 73px;
+}
+
+.location-options {
+    position: relative;
+    bottom: 62px;
+    width: 216px;
+    left: 510px;
+    border: 1px solid #c48d4d;
+    border-radius: 5px;
+    text-align: left;
+    padding: 10px 0 10px 10px;
+    font-size: 17px;
+    cursor: pointer;
+}
+
+.location-options p {
+    margin-left: 3px;
+    margin-top: 3px;
+    margin-bottom: 3px;
+    padding: 0;
+    font-weight: bold;
+}
+.location-options p:hover {
+    color: #c48d4d;
+}
+
+.google-map iframe {
+    width: 75%;
 }
