Add new section with welcome text and reasons why to choose this salon

--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -170,4 +170,40 @@
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
+    <section class="network-salon">
+        <div class="welcome-text">
+            <p>Студио</p>
+            <h3>BEAUTY STUDIO STYLE в Пловдив</h3>
+            <p>Добре дошли в света на красотата и грижата! BEAUTY STUDIO STYLE може да осигури на своите клиенти всички
+                видове разкрасителни процедури.</p>
+            <p>Ако си търсите студио за красота с готина атмосфера, качествено извършане на услуги, маркови продукти и
+                опитни професионалисти, които
+                могат да задоволят дори и най-капризните ти желания - дошли сте на правилното място! Също така
+                наблюдаваме постоянен растеж на нашите редовни клиенти всяка година и
+                ето няколко причини защо.
+            </p>
+        </div>
+        <div class="reasons">
+            <h4>Грижа в 2/4 ръце</h4>
+            <p id="reasons-first-p">BEAUTY STUDIO STYLE подхожда индивидуално към всеки един клиент и умело прилага
+                всички услуги. Нашите клиенти могат да изберат една или две наведнъж процедури, които
+                да бъдат извършени. Така ще запазите най-ценния си ресурс, а именно вашето време.
+            </p>
+            <p id="reasons-first-img"><img src="../static/images/manicure3.jpg" alt="img"/></p>
+            <div id="reasons-location-text">
+                <h4>Удобна локация</h4>
+                <p>Клиентите на BEAUTY STUDIO STYLE имат възможността освен да избират удобно време за тях, ами и
+                    наистина удобна локация.</p>
+            </div>
+            <div id="reasons-up-to-date">
+                <h4>В крачка с времето</h4>
+                <p>Нашите фризьор и маникюрист имат изкарани подходящи обучения и практически опит. Допълнително, следим
+                    всички актуални тенденции и предложения от световните марки.
+                    Също така, нашите експерти по красота постоянно се усъвършенстват като учат нови техники и методи на
+                    различни семинари.
+                </p>
+            </div>
+            <p id="reasons-second-img"><img src="../static/images/hair-model11.jpg" alt="img"/></p>
+        </div>
+    </section>
 {% endblock %}
