Create new div inside section 'network salon

--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -205,5 +205,19 @@
             </div>
             <p id="reasons-second-img"><img src="../static/images/hair-model11.jpg" alt="img"/></p>
         </div>
+        <div class="different-services-bullets">
+            <p>Различни видове услуги</p>
+            <h4>Ние специализираме в комплексни техники за боядисване, като например боядисване от черно към русо и Airtouch. Също така предлагаме и изключителен маникюр и педикюр.</h4>
+            <ul>
+                <li>Поправяме грешки допуснати в цвета на косата.</li>
+                <li>Възстановяваме увредена коса чрез терапия.</li>
+                <li>Подготвяме те за специални събития.</li>
+                <li>Напълно преобразяваме или подобряваме твоята визия като наблегнем върху натуралната ти красота.</li>
+                <li>Помагаме като поддържаме твоята визия винаги добре изглеждаща.</li>
+                <li>Всяко едно усилие, направено от нас, е за да може да се почувстваш уверен и атрактивен в собственото си тяло.</li>
+            </ul>
+            <p id="different-services-img"><img src="../static/images/fashion-model1.jpg" alt="model"/></p>
+
+        </div>
     </section>
 {% endblock %}
