Create section with services

--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -220,4 +220,18 @@
 
         </div>
     </section>
+    <section class="extended-service-list">
+        <p id="approach">Съчетаване</p>
+        <h4>Списък с услуги</h4>
+        <div id="hairdressing-service">
+            <p class="service-name">Фризьорски услуги</p>
+            <p class="service-desc"><span style="font-weight: bold">Фризьорски услуги:</span> предлагаме всички видове грижа за коса - от мъжки и дамски прически и стилиране до сложни техники на боядисване,
+             и третиране на косата.</p>
+        </div>
+        <div id="nail-service">
+            <p class="service-name">Маникюрски услуги</p>
+            <p class="service-desc"><span style="font-weight: bold">Маникюрски услуги:</span> маникюр, педикюр, изграждане, дизайн.</p>
+        </div>
+    </section>
+
 {% endblock %}
