Create section with text, which describes about perfectionism in the salon

--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -233,5 +233,17 @@
             <p class="service-desc"><span style="font-weight: bold">Маникюрски услуги:</span> маникюр, педикюр, изграждане, дизайн.</p>
         </div>
     </section>
-
+    <section class="perfection-desc">
+        <div class="perfection-text">
+            <h4>Перфекционизъм във всяка една точка - от интериора до ножиците</h4>
+            <p>Комфортно, красиво, оборудвано студио, където можеш да получиш всякаква процедура - от грижата за вашата коса до ноктите - която ще бъде изпълнена в приятна атмосфера и добри
+            условия за вас като клиент.</p>
+            <p>Всеки един член от нашия екип си разбира перфектно от работата - дали ще е боядисване с Hollywood ефект или изграждане на нокти и декориране по идея на клиента.</p>
+            <p>Разполагаме с качествени продукти и материали (за третиране на коса) само от одобрени брандове на световно ниво, които са лидери в тяхната сфера.</p>
+            <p>Използваме професионални инструменти и екипировка, които биват стерилизирани / дезинфекцирани веднага след употреба.</p>
+        </div>
+        <div class="perfection-img">
+            <img src="../static/images/hairdresser.jpg" alt="model">
+        </div>
+    </section>
 {% endblock %}
