--- a/flask_project/static/css/styles.css
+++ b/flask_project/static/css/styles.css
@@ -188,6 +188,7 @@ body::-webkit-scrollbar-thumb {
     width: 100%;
     height: 100%;
     border-radius: 5px;
+    box-shadow: 0 1px 16px 3px black;
 }
 
 .google-map {
@@ -445,4 +446,36 @@ body::-webkit-scrollbar-thumb {
 .extended-service-list .service-desc {
     font-size: 18px;
     width: 58%;
+}
+
+.perfection-desc {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 0 30px;
+    margin-top: 100px;
+}
+
+.perfection-desc .perfection-text {
+    width: 35%;
+}
+
+.perfection-text h4 {
+    font-weight: bold;
+    font-size: 33px;
+    margin-bottom: 39px;
+}
+
+.perfection-text p {
+    font-size: 18px;
+}
+
+.perfection-desc .perfection-img {
+    width: 20%;
+}
+
+.perfection-desc .perfection-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 5px;
 }
