Sets localStorage when link, which redirects to price template, is clicked.

--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -75,7 +75,7 @@
                 </button>
                 <div id="item-list" class="item-list">
                     <a class="item-link"
-                       href="https://www.w3schools.com/cssref/tryit.php?filename=trycss_sel_after_style">
+                       href="{{ url_for('pricing') }}" onclick="localStorage.setItem('id', '1')">
                         <img id="item" class="item" src="../static/images/hair-model8.jpg" alt="hair-model"/>
                         <div class="inner-service-text">
                             <p>Подстригване</p>
@@ -87,7 +87,7 @@
 
                     </a>
                     <a class="item-link"
-                       href="https://www.w3schools.com/cssref/tryit.php?filename=trycss_sel_after_style">
+                       href="{{ url_for('pricing') }}" onclick="localStorage.setItem('id', '2')">
                         <img id="item" class="item"
                              src="../static/images/hair-model.jpg" alt="hair-dying"/>
                         <div class="inner-service-text">
@@ -98,7 +98,7 @@
                         <span class="plus-icon"><i class="fa-sharp fa-thin fa-plus"></i></span>
                     </a>
                     <a class="item-link"
-                       href="https://www.w3schools.com/cssref/tryit.php?filename=trycss_sel_after_style">
+                       href="{{ url_for('pricing') }}" onclick="localStorage.setItem('id', '3')">
                         <img id="item" class="item"
                              src="../static/images/hair-treatment3.jpg" alt="hair-therapy"/>
                         <div class="inner-service-text">
@@ -109,7 +109,7 @@
                         <span class="plus-icon"><i class="fa-sharp fa-thin fa-plus"></i></span>
                     </a>
                     <a class="item-link"
-                       href="https://www.w3schools.com/cssref/tryit.php?filename=trycss_sel_after_style">
+                       href="{{ url_for('pricing') }}" onclick="localStorage.setItem('id', '4')">
                         <img id="item" class="item"
                              src="../static/images/manicure.jpg" alt="manicure"/>
                         <div class="inner-service-text">
